--- a/source/css/_common/components/highlight/highlight.styl
+++ b/source/css/_common/components/highlight/highlight.styl
@@ -21,6 +21,7 @@ code {
   word-wrap: break-word;
   color: $code-foreground;
   background: $code-background;
+  border: $code-border;
   border-radius: $code-border-radius;
   font-size $code-font-size;
 }
