--- a/source/css/_variables/base.styl
+++ b/source/css/_variables/base.styl
@@ -146,9 +146,13 @@ $table-row-hover-bg-color       = $whitesmoke
 $code-font-family               = $font-family-monospace
 $code-font-size                 = 13px
 $code-font-size                 = unit(hexo-config('font.codes.size'), px) if hexo-config('font.codes.size') is a 'unit'
-$code-border-radius             = 3px
-$code-foreground                = $black-light
-$code-background                = $gainsboro
+$code-border                    = 1px solid #d6d6d6;
+// $code-border-radius          = 3px
+$code-border-radius             = 4px
+// $code-foreground             = $black-light
+$code-foreground                = #c7254e
+// $code-background             = $gainsboro
+$code-background                = #f9f2f4
 
 
 
