修改 ul(list-style) blockquote

--- a/source/css/_common/scaffolding/base.styl
+++ b/source/css/_common/scaffolding/base.styl
@@ -82,9 +82,16 @@ hr {
 }
 
 blockquote {
-  padding: 0 15px;
+  // padding: 0 15px;
+  padding: 17px 15px 15px;
+  margin-bottom: 20px;
   color: $grey-dim;
   border-left: 4px solid $gray-lighter;
+  background-color: #f7f7f7;
+
+  p, ol, ul, menu, dir {
+    margin: 0;
+  }
 
   cite::before {
     content: "-";
